Trying to fix contrast - 1

--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -8,7 +8,7 @@
   --br-sm-2: 14px;
   --box-shadow-1: 0 3px 15px rgba(0, 0, 0, 0.3);
   --color-white-2: #fff;
-  --color-yellow: #fff36d;
+  --color-yellow: #976d0c;
   --font-thin: 100;
   --font-regular: 300;
   --font-medium: 500;
