--- a/assets/styles/_independent-components.scss
+++ b/assets/styles/_independent-components.scss
@@ -79,8 +79,8 @@
 .marker {
   text-decoration-line: underline;
   text-decoration-style: solid;
-  text-decoration-thickness: 0.4rem;
-  text-underline-offset: -0.2em;
+  text-decoration-thickness: 1.3rem;
+  text-underline-offset: -1rem;
   text-decoration-color: var(--color-opposite);
   text-decoration-skip-ink: none;
   text-decoration-skip: none;
