--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -202,7 +202,7 @@
         aspect-ratio: 1/1;
         border-radius: 50%;
         color: var(--color-white-2);
-        background-color: var(--color-opposite);
+        background-color: var(--color-secondary);
         @include cubic-bezier;
 
         &:hover {
